# climate-intervention-vbd

./: .gitignore  README.md  Snakefile  pyproject.toml
data/: arbo_occ_thinned.csv
notebooks/: utils.py
results/figure_data/downscaled/: temperature_time_series.nc
results/figure_data/downscaled/mordecai_ae_aegypti_niche/: location.nc  location_others.nc
results/figure_data/downscaled/mordecai_ae_albopictus_niche/: location.nc  location_others.nc
results/figure_data/native/: temperature_time_series.nc
results/figure_data/native/mordecai_ae_aegypti_niche/: change_example.nc  change_example_others.nc  change_summary.nc  current.nc  even_later_mean.nc  later_mean.nc  location.nc  location_others.nc  mean.nc  trend_summary.nc
results/figure_data/native/mordecai_ae_albopictus_niche/: change_example.nc  change_example_others.nc  change_summary.nc  current.nc  even_later_mean.nc  later_mean.nc  location.nc  location_others.nc  mean.nc  trend_summary.nc
results/mordecai_ae_aegypti_niche/arise_control/: 0_2025.nc  0_2026.nc  0_2027.nc  0_2028.nc  0_2029.nc  0_2030.nc  0_2031.nc  0_2032.nc  0_2033.nc  0_2034.nc  0_2035.nc  0_2036.nc  0_2037.nc  0_2038.nc  0_2039.nc  0_2040.nc  0_2041.nc  0_2042.nc  0_2043.nc  0_2044.nc  0_2045.nc  0_2046.nc  0_2047.nc  0_2048.nc  0_2049.nc  0_2050.nc  0_2051.nc  0_2052.nc  0_2053.nc  0_2054.nc  0_2055.nc  0_2056.nc  0_2057.nc  0_2058.nc  0_2059.nc  0_2060.nc  0_2061.nc  0_2062.nc  0_2063.nc  0_2064.nc  (+360 more)
results/mordecai_ae_aegypti_niche/arise_feedback/: 0_2035.nc  0_2036.nc  0_2037.nc  0_2038.nc  0_2039.nc  0_2040.nc  0_2041.nc  0_2042.nc  0_2043.nc  0_2044.nc  0_2045.nc  0_2046.nc  0_2047.nc  0_2048.nc  0_2049.nc  0_2050.nc  0_2051.nc  0_2052.nc  0_2053.nc  0_2054.nc  0_2055.nc  0_2056.nc  0_2057.nc  0_2058.nc  0_2059.nc  0_2060.nc  0_2061.nc  0_2062.nc  0_2063.nc  0_2064.nc  1_2035.nc  1_2036.nc  1_2037.nc  1_2038.nc  1_2039.nc  1_2040.nc  1_2041.nc  1_2042.nc  1_2043.nc  1_2044.nc  (+260 more)
scripts/: download_data.py  inputs.py  run_epi_model.py
src/: calc_mean_temperatures.py  download_data.py  figure_data_functions.py  inputs.py  make_figure_data.py  make_figures.py  plotting_functions.py  run_epi_model.py
