[project]
name = "climate-intervention-vbd"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
python-dotenv = "*"
selenium = "*"
# climepi dependencies
bottleneck = "*"
dask = ">=2024.11.2"
datashader = "*"
flox = "*"
geopy = "*"
geoviews = "*"
h5netcdf = "*"
hvplot = "*"
intake-esm = "*"
kerchunk = "<0.2.8"              # https://github.com/fsspec/kerchunk/issues/566
nc-time-axis = "*"
numpy = "*"
pandas = "*"
panel = "*"
param = "*"
pooch = "*"
requests = "*"
s3fs = ">=2021.4"
siphon = "*"
urllib3 = "*"
xarray = "!=2025.7.0,!=2025.7.1" # https://github.com/pydata/xarray/issues/10536
xcdat = "*"
zarr = "<3"                      # https://github.com/fsspec/kerchunk/issues/566

[tool.pixi.pypi-dependencies]
climepi = { git = "https://github.com/idm-oxford/climate-epidemics", branch = "main" }

[tool.pixi.feature.dev.dependencies]
ruff = "*"
ipykernel = "*"
jupyter_bokeh = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }
prod = { features = [], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
