[project]
name = "climate-intervention-vbd"
requires-python = ">=3.11"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.dependencies]
climepi = ">=0.6.0"
holoviews = "*"
numpy = "*"
selenium = "*"
snakemake = "*"
snakemake-executor-plugin-slurm = "*"
svgutils = "*"
xarray = "*"
webdriver-manager = "*"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
ipykernel = "*"
jupyter_bokeh = "*"

[tool.pixi.feature.dev.pypi-dependencies]

[tool.pixi.environments]
default = { features = ["dev"], solve-group = "prod" }
prod = { features = [], solve-group = "prod" }

[tool.pixi.feature.dev.tasks]
lint = "ruff check"
format = "ruff format"
